fixed images sizes on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -630,10 +630,6 @@ html::-webkit-scrollbar-thumb {
 }
 
 @media(max-width: 590px){
-    .projectImg{
-        height: 100%;
-    }
-
     .background1{
         display: none;
     }
